--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorRed">#F00</color>
     <color name="colorBlack">#000</color>
     <color name="colorWhite">#FFF</color>
+    <color name="colorhuise">#DCDCDC</color>
 </resources>
