--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorpink">#FF7F50</color>
     <color name="colorBackground">#ffffff</color>
     <color name="jinse">#FFD700</color>
+    <color name="yellow">#ff0</color>
 </resources>
