--- a/src/main/res/menu/toolbar.xml
+++ b/src/main/res/menu/toolbar.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <item android:id="@+id/userFeedback" android:title="用户反馈"
-        app:showAsAction="collapseActionView"  tools:ignore="AppCompatRespource" android:orderInCategory="110"/>
-    <item android:id="@+id/userExit" android:title="退出"
-        app:showAsAction="collapseActionView"  tools:ignore="AppCompatRespource" android:orderInCategory="100"/>
+    <item android:id="@+id/userFeedback" android:title="意见反馈" android:icon="@drawable/ic_feedback_black_24dp"
+        app:showAsAction="ifRoom"  tools:ignore="AppCompatRespource" android:orderInCategory="100"/>
+    <item android:id="@+id/userExit" android:title="退出" android:icon="@drawable/exit"
+        app:showAsAction="always"  tools:ignore="AppCompatRespource" android:orderInCategory="110"/>
 </menu>
