--- a/src/main/res/menu/nav_menu.xml
+++ b/src/main/res/menu/nav_menu.xml
@@ -14,7 +14,7 @@
         <item android:id="@+id/nav_favorite" android:title="个人收藏" android:icon="@drawable/na_mail"
             android:checkable="true"
             />
-        <item android:id="@+id/nav_settings" android:title="系统设置" android:icon="@drawable/nav_settings"
+        <item android:id="@+id/nav_settings" android:title="清除缓存" android:icon="@drawable/nav_settings"
             android:checkable="true"
             />
         <item android:id="@+id/nav_exit" android:title="切换账号" android:icon="@drawable/ic_switch" android:checkable="true"/>
