--- a/src/main/res/layout/activity_user__data.xml
+++ b/src/main/res/layout/activity_user__data.xml
@@ -12,10 +12,10 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/userData_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:titleTextColor="@color/black"
+            android:layout_height="40dp"
+            app:titleTextColor="@color/white"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:background="@color/colorBackground"
+            android:background="@color/title"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
         <LinearLayout
             android:orientation="horizontal"
