--- a/src/main/res/layout/activity_web.xml
+++ b/src/main/res/layout/activity_web.xml
@@ -28,8 +28,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">
-
             </WebView>
+            <ListView
+                android:id="@+id/list_view"
+                android:visibility="invisible"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_webcomment"
                 android:layout_width="match_parent"
