--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -31,5 +31,28 @@
 
     </style>
 
+    -<style parent="@android:style/Theme.Dialog" name="ActionSheetStyle">
+    <!-- 背景透明 -->
+    <item name="android:windowBackground">@android:color/transparent</item>
+    <item name="android:windowContentOverlay">@null</item>
+    <!-- 浮于Activity之上 -->
+    <item name="android:windowIsFloating">true</item>
+    <!-- 边框 -->
+    <item name="android:windowFrame">@null</item>
+    <!-- Dialog以外的区域模糊效果 -->
+    <item name="android:backgroundDimEnabled">true</item>
+    <!-- 无标题 -->
+    <item name="android:windowNoTitle">true</item>
+    <!-- 半透明 -->
+    <item name="android:windowIsTranslucent">true</item>
+    <!-- Dialog进入及退出动画 -->
+    <item name="android:windowAnimationStyle">@style/ActionSheetAnimation</item>
+</style>
+    <!-- ActionSheet进出动画 -->
+    -<style parent="@android:style/Animation.Dialog" name="ActionSheetAnimation">
+    <item name="android:windowEnterAnimation">@anim/actionsheet_in</item>
+    <item name="android:windowExitAnimation">@anim/actionsheet_out</item>
+</style>
+
 
 </resources>
