--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="colorpanelouter">#f2f2f2</color>
     <color name="buttoncolor">#099bfb</color>
     <color name="title">#3A91FB</color>
+    <color name="danlanse">#C6E2FF</color>
 
 </resources>
